[package]
name = "rpkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rpkv"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
thiserror = "1.0.38"
